# libfuzzer-mutation-graph-tool

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: cli_afl.rs  cli_libfuzzer.rs  main.rs
src/mutation_graph/: directed_edge.rs  error.rs  mod.rs  mutation_graph_edge.rs  mutation_graph_node.rs  result.rs  sha1_string.rs
src/mutation_graph/parser/: mod.rs
src/mutation_graph/perser/: error.rs  mod.rs  result.rs
src/mutation_graph/plot_options/: error.rs  mod.rs  plot_option.rs  result.rs
src/seed_tree/: directed_edge.rs  error.rs  file_hash.rs  mod.rs  mutation_graph_edge.rs  mutation_graph_node.rs  node_name.rs  result.rs  util.rs
src/seed_tree/parser/: afl.rs  error.rs  generic.rs  libfuzzer.rs  mod.rs
src/seed_tree/plot_options/: error.rs  mod.rs  plot_option.rs  result.rs
src/subcommand/: deriv.rs  leaves.rs  ls.rs  mod.rs  origin.rs  plot.rs  pred.rs  roots.rs
src/subcommand/afl/: filter.rs  mod.rs  plot.rs  preds.rs
src/subcommand/common/: children.rs  leaves.rs  max_rank.rs  mod.rs  nodes.rs  roots.rs
src/subcommand/libfuzzer/: deriv.rs  leaves.rs  ls.rs  mod.rs  origin.rs  plot.rs  pred.rs
src/subcommand/util/: mod.rs  plot_dot_graph.rs
test/sample/mutation_graph_file/: fuzzer-test-suite-openssl-1.0.1f.dot  graph1.dot
