[package]
name = "seed-tree-analyzer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "seed-tree-analyzer-libfuzzer"
path = "src/cli_libfuzzer.rs"
required-features = ["libfuzzer"]

[[bin]]
name = "seed-tree-analyzer-afl"
path = "src/cli_afl.rs"
required-features = ["afl"]

[features]
libfuzzer = []
afl = []

[dependencies]
### Logging
log = "0.4.0"
env_logger = "0.8.4"

### CLI Interface
clap = "2.33.3"

regex = "1.5.4"
binary-diff = { version = "^0", git = "https://github.com/K-atc/binary-diff-rs.git" }
#binary-diff = { version = "^0", path = "../binary-diff-rs" }

[dev-dependencies]
cargo-husky = { version = "1", features = ["precommit-hook", "run-cargo-fmt"] }